crates/engram-cli/tests/snapshots/command/groups_subscribe_confirmed.snap
---
source: crates/engram-cli/src/testutil.rs
expression: body
---
--- prompts ---
? Continue? [y/N] → yes
--- stdout ---
Subscribed project '[PID]' to group 'shared-conventions' (id: __g_436885406724).
--- stderr ---
Warning: Subscribing project '[PID]' to group 'shared-conventions' will fold 0 memories (store not yet created) into this project's queries, and let this project write to the group (no other projects share it yet).
