crates/engram-cli/tests/snapshots/command/groups_subscribe_yes.snap
---
source: crates/engram-cli/src/testutil.rs
expression: body
---
--- prompts ---
--- stdout ---
Subscribed project '[PID]' to group 'shared-conventions' (id: __g_436885406724).
--- stderr ---
