crates/engram-cli/tests/snapshots/command/groups_unsubscribe_not_subscribed.snap
---
source: crates/engram-cli/src/testutil.rs
expression: body
---
--- prompts ---
--- stdout ---
Project '[PID]' is not subscribed to 'shared-conventions'; nothing to do.
--- stderr ---
