crates/engram-cli/tests/snapshots/command/progress_prune_bar_at_zero.snap
---
source: crates/engram-cli/src/progress.rs
expression: body
---
stale [----------------------------------------] 0/4 (0s)
